--- a/index.html
+++ b/index.html
@@ -1,128 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+		<title>Calculator</title>
+	</head>
 
-    <title>Calculator</title>
-</head>
+	<body>
+		<div class="container">
+			<div class="calc__screen">
+				<div class="calc__screen--top">86 x 72 x 86 x 72 x 86</div>
+				<div class="calc__screen--bottom">6192</div>
+			</div>
 
-<body>
-    <div class="container">
-        <div class="calc__screen">
-            <div class="calc__screen--top">
-                86 x 72 x 86 x 72 x 86
-            </div>
-            <div class="calc__screen--bottom">
-                6192
-            </div>
-        </div>
+			<div class="calc__body">
+				<div class="calc__body--row">
+					<a class="btn__clear">
+						<div
+							data-type="operator"
+							data-value="clear"
+							class="calc__btn calc__btn--clear"
+						>
+							C
+						</div>
+					</a>
 
-        <div class="calc__body">
-            <div class="calc__body--row">
+					<a class="btn__plus-minus">
+						<div
+							data-type="operator"
+							data-value="±"
+							class="calc__btn calc__btn--plus-minus"
+						>
+							±
+						</div>
+					</a>
 
-                <a class="btn__clear">
-                    <div class="calc__btn calc__btn--clear">C</div>
-                </a>
+					<a class="btn__percentage">
+						<div class="calc__btn" data-type="operator" data-value="%">%</div>
+					</a>
 
-                <a class="btn__plus-minus">
-                    <div class="calc__btn calc__btn--plus-minus">±</div>
-                </a>
+					<a class="btn__divide">
+						<div
+							data-type="operator"
+							data-value="/"
+							class="calc__btn calc__btn--operator"
+						>
+							÷
+						</div>
+					</a>
+				</div>
 
-                <a class="btn__percentage">
-                    <div class="calc__btn ">%</div>
-                </a>
+				<div class="calc__body--row">
+					<a class="btn__7">
+						<div class="calc__btn" data-type="num" data-value="7">7</div>
+					</a>
 
-                <a class="btn__divide">
-                    <div class="calc__btn calc__btn--operator">÷</div>
-                </a>
-            </div>
+					<a class="btn__8">
+						<div class="calc__btn" data-type="num" data-value="8">8</div>
+					</a>
 
-            <div class="calc__body--row">
+					<a class="btn__9">
+						<div class="calc__btn" data-type="num" data-value="9">9</div>
+					</a>
 
-                <a class="btn__7">
-                    <div class="calc__btn">7</div>
-                </a>
+					<a class="btn__multiply">
+						<div
+							data-type="operator"
+							data-value="*"
+							class="calc__btn calc__btn--operator"
+						>
+							x
+						</div>
+					</a>
+				</div>
 
-                <a class="btn__8">
-                    <div class="calc__btn">8</div>
-                </a>
+				<div class="calc__body--row">
+					<a class="btn__4">
+						<div class="calc__btn" data-type="num" data-value="4">4</div>
+					</a>
 
-                <a class="btn__9">
-                    <div class="calc__btn">9</div>
-                </a>
+					<a class="btn__5">
+						<div class="calc__btn" data-type="num" data-value="5">5</div>
+					</a>
 
-                <a class="btn__multiply">
-                    <div class="calc__btn calc__btn--operator">x</div>
-                </a>
-            </div>
+					<a class="btn__6">
+						<div class="calc__btn" data-type="num" data-value="6">6</div>
+					</a>
 
-            <div class="calc__body--row">
+					<a class="btn__minus">
+						<div
+							data-type="operator"
+							data-value="-"
+							class="calc__btn calc__btn--operator"
+						>
+							-
+						</div>
+					</a>
+				</div>
 
-                <a class="btn__4">
-                    <div class="calc__btn">4</div>
-                </a>
+				<div class="calc__body--row">
+					<a class="btn__1">
+						<div class="calc__btn" data-type="num" data-value="1">1</div>
+					</a>
 
-                <a class="btn__5">
-                    <div class="calc__btn">5</div>
-                </a>
+					<a class="btn__2">
+						<div class="calc__btn" data-type="num" data-value="2">2</div>
+					</a>
 
-                <a class="btn__6">
-                    <div class="calc__btn">6</div>
-                </a>
+					<a class="btn__3">
+						<div class="calc__btn" data-type="num" data-value="3">3</div>
+					</a>
 
-                <a class="btn__minus">
-                    <div class="calc__btn calc__btn--operator">-</div>
-                </a>
-            </div>
+					<a class="btn__plus">
+						<div
+							data-type="operator"
+							data-value="+"
+							class="calc__btn calc__btn--operator"
+						>
+							+
+						</div>
+					</a>
+				</div>
 
-            <div class="calc__body--row">
-                <a class="btn__1">
-                    <div class="calc__btn">1</div>
-                </a>
+				<div class="calc__body--row">
+					<a class="btn__0">
+						<div class="calc__btn" data-type="num" data-value="0">0</div>
+					</a>
 
-                <a class="btn__2">
-                    <div class="calc__btn">2</div>
-                </a>
+					<a class="btn__decimal">
+						<div class="calc__btn">.</div>
+					</a>
 
-                <a class="btn__3">
-                    <div class="calc__btn">3</div>
-                </a>
+					<a class="btn__delete">
+						<div class="calc__btn">DEL</div>
+					</a>
 
-                <a class="btn__plus">
-                    <div class="calc__btn calc__btn--operator">+</div>
-                </a>
-            </div>
+					<a class="btn__equal">
+						<div
+							data-type="operator"
+							data-value="="
+							class="calc__btn calc__btn--equal"
+						>
+							=
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
 
-            <div class="calc__body--row">
-
-                <a class="btn__0">
-                    <div class="calc__btn">0</div>
-                </a>
-
-                <a class="btn__decimal">
-                    <div class="calc__btn">.</div>
-                </a>
-
-                <a class="btn__delete">
-                    <div class="calc__btn">DEL</div>
-                </a>
-
-                <a class="btn__equal">
-                    <div class="calc__btn calc__btn--equal">=</div>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <a href="http://github.com/cyber-mat/calculator" target="_blank">&copy; Olamide Olaniyan</a>
-    </footer>
-    <script src="app.js"></script>
-</body>
-
+		<footer class="footer">
+			<a href="http://github.com/cyber-mat/calculator" target="_blank"
+				>&copy; Olamide Olaniyan</a
+			>
+		</footer>
+		<script src="app.js"></script>
+	</body>
 </html>
