modified markup and styling to use button element in order to disable number buttons after clicking =. will modify this later

--- a/index.html
+++ b/index.html
@@ -23,133 +23,155 @@
 			<div class="calc__body">
 				<div class="calc__body--row">
 					<a class="btn__clear">
-						<div
+						<button
 							data-type="operator"
 							data-value="clear"
 							class="calc__btn calc__btn--clear"
 						>
 							C
-						</div>
+						</button>
 					</a>
 
 					<a class="btn__plus-minus">
-						<div
+						<button
 							data-type="operator"
 							data-value="±"
 							class="calc__btn calc__btn--plus-minus"
 						>
 							±
-						</div>
+						</button>
 					</a>
 
 					<a class="btn__percentage">
-						<div class="calc__btn" data-type="operator" data-value="%">%</div>
+						<button class="calc__btn" data-type="operator" data-value="%">
+							%
+						</button>
 					</a>
 
 					<a class="btn__divide">
-						<div
+						<button
 							data-type="operator"
 							data-value="/"
 							class="calc__btn calc__btn--operator"
 						>
 							÷
-						</div>
+						</button>
 					</a>
 				</div>
 
 				<div class="calc__body--row">
 					<a class="btn__7">
-						<div class="calc__btn" data-type="num" data-value="7">7</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="7">
+							7
+						</button>
 					</a>
 
 					<a class="btn__8">
-						<div class="calc__btn" data-type="num" data-value="8">8</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="8">
+							8
+						</button>
 					</a>
 
 					<a class="btn__9">
-						<div class="calc__btn" data-type="num" data-value="9">9</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="9">
+							9
+						</button>
 					</a>
 
 					<a class="btn__multiply">
-						<div
+						<button
 							data-type="operator"
 							data-value="*"
 							class="calc__btn calc__btn--operator"
 						>
 							x
-						</div>
+						</button>
 					</a>
 				</div>
 
 				<div class="calc__body--row">
 					<a class="btn__4">
-						<div class="calc__btn" data-type="num" data-value="4">4</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="4">
+							4
+						</button>
 					</a>
 
 					<a class="btn__5">
-						<div class="calc__btn" data-type="num" data-value="5">5</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="5">
+							5
+						</button>
 					</a>
 
 					<a class="btn__6">
-						<div class="calc__btn" data-type="num" data-value="6">6</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="6">
+							6
+						</button>
 					</a>
 
 					<a class="btn__minus">
-						<div
+						<button
 							data-type="operator"
 							data-value="-"
 							class="calc__btn calc__btn--operator"
 						>
 							-
-						</div>
+						</button>
 					</a>
 				</div>
 
 				<div class="calc__body--row">
 					<a class="btn__1">
-						<div class="calc__btn" data-type="num" data-value="1">1</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="1">
+							1
+						</button>
 					</a>
 
 					<a class="btn__2">
-						<div class="calc__btn" data-type="num" data-value="2">2</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="2">
+							2
+						</button>
 					</a>
 
 					<a class="btn__3">
-						<div class="calc__btn" data-type="num" data-value="3">3</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="3">
+							3
+						</button>
 					</a>
 
 					<a class="btn__plus">
-						<div
+						<button
 							data-type="operator"
 							data-value="+"
 							class="calc__btn calc__btn--operator"
 						>
 							+
-						</div>
+						</button>
 					</a>
 				</div>
 
 				<div class="calc__body--row">
 					<a class="btn__0">
-						<div class="calc__btn" data-type="num" data-value="0">0</div>
+						<button class="calc__btn num-btn" data-type="num" data-value="0">
+							0
+						</button>
 					</a>
 
 					<a class="btn__decimal">
-						<div class="calc__btn">.</div>
+						<button class="calc__btn">.</button>
 					</a>
 
 					<a class="btn__delete">
-						<div class="calc__btn">DEL</div>
+						<button class="calc__btn">DEL</button>
 					</a>
 
 					<a class="btn__equal">
-						<div
+						<button
 							data-type="operator"
 							data-value="="
 							class="calc__btn calc__btn--equal"
 						>
 							=
-						</div>
+						</button>
 					</a>
 				</div>
 			</div>
