cleaned up and commented the code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</a>
 
 					<a class="btn__percentage">
-						<button class="calc__btn" data-type="operator" data-value="%">
+						<button class="calc__btn" data-type="operator" data-value="/100">
 							%
 						</button>
 					</a>
