--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<body>
 		<div class="container">
 			<div class="calc__screen">
-				<div class="calc__screen--top">86 x 72 x 86 x 72 x 86</div>
-				<div class="calc__screen--bottom">6192</div>
+				<div class="calc__screen--top">&nbsp</div>
+				<div class="calc__screen--bottom">0</div>
 			</div>
 
 			<div class="calc__body">
