--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
 					</a>
 
 					<a class="btn__decimal">
-						<button class="calc__btn">.</button>
+						<button data-type="num" data-value="." class="calc__btn">.</button>
 					</a>
 
 					<a class="btn__delete">
-						<button class="calc__btn">DEL</button>
+						<button data-type="operator" data-value="del" class="calc__btn">
+							DEL
+						</button>
 					</a>
 
 					<a class="btn__equal">
