fixed a bug to prevent display from overflowing screen

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		</div>
 
 		<footer class="footer">
-			<a href="http://github.com/cyber-mat/calculator" target="_blank"
+			<a href="https://github.com/lamideolaniyan/newcalc" target="_blank"
 				>&copy; Olamide Olaniyan</a
 			>
 		</footer>
